# optolithium

./: .hgignore  COPYRIGHT  README.md
OptolithiumC/: CMakeLists.txt  FindFFTW.cmake  clipper.i  optolithiumc.i
OptolithiumC/examples/: aerial_image_various_source_shapes.py  resist_images_and_contours.py
OptolithiumC/include/: opl_capi.h  opl_contours.h  opl_conv.h  opl_eikonal.h  opl_fft.h  opl_geometry.h  opl_interp.h  opl_iter.h  opl_log.h  opl_misc.h  opl_physc.h  opl_sim.h  optolithium.h
OptolithiumC/libs/armadillo/include/armadillo_bits/: arma_boost.hpp
OptolithiumC/libs/armadillo/src/: wrapper.cpp
OptolithiumC/libs/armanpy/example/: CMakeLists.txt  example.cpp  example.hpp  example.i  example.py
OptolithiumC/libs/armanpy/include/: armanpy.hpp  armanpy.i  armanpy_1d.i  armanpy_2d.i  armanpy_3d.i  numpy.i
OptolithiumC/libs/clipper/: CMakeLists.txt
OptolithiumC/libs/clipper/include/: clipper.hpp
OptolithiumC/libs/clipper/src/: clipper.cpp
OptolithiumC/libs/easylogging/: easylogging++.h
OptolithiumC/libs/eikonal/: CMakeLists.txt
OptolithiumC/libs/eikonal/include/: FMM_API.h  FMM_Config2d.h  FMM_Config3d.h  FMM_Core.h  FMM_Heap.h  FMM_Macros.h
OptolithiumC/libs/eikonal/src/: FMM_Core.c  FMM_Heap.c  FMM_eikonal2d.c  FMM_eikonal3d.c
OptolithiumC/libs/fftw3-win32/: fftw3.f03  fftw3l.f03  fftw3q.f03  libfftw3-3.def  libfftw3f-3.def  libfftw3l-3.def
OptolithiumC/libs/fourier/: CMakeLists.txt
OptolithiumC/libs/fourier/include/: basics.h  fourier.h  primes.h
OptolithiumC/libs/fourier/src/: check.c  fourier.c  primes.c
OptolithiumC/libs/fourier/tools/: generate_twiddles.m
OptolithiumC/libs/kissfft/: CMakeLists.txt
OptolithiumC/libs/kissfft/include/: kiss_fft.h
OptolithiumC/plugins/: CMakeLists.txt
OptolithiumC/plugins/src/dev_models/: enhanced.c  enhanced_notch.c  mack.c  notch.c  notch_depth.c
OptolithiumC/plugins/src/masks/: fiveBarLine.c  line1D.c  line1D_SRAF.c  space1D.c
OptolithiumC/plugins/src/pupil_filters/: central_obscuration.c
OptolithiumC/plugins/src/source_shapes/: annular.c  coherent.c  convenient.c
OptolithiumC/src/: opl_capi.cpp  opl_contours.cpp  opl_geometry.cpp  opl_interp.cpp  opl_log.cpp  opl_sim.cpp
OptolithiumGui/: auxmath.py  config.py  core.py  helpers.py  info.py  main.py  matplotlibrc  metrics.py  optolithium.py  pcpi.py  physc.py  plugins.py  qt.py  resources.py  setup.py
OptolithiumGui/database/: Enum.py  __init__.py  base.py  common.py  dbparser.py  orm.py  settings.py
OptolithiumGui/options/: __init__.py  common.py  structures.py
OptolithiumGui/share/data/: Air-Vacuum.MAT  Si Dioxide.MAT  Si Nitride.MAT  Silicon.MAT  a-Polysilicon.MAT  fivebar.MSK  i-line.res
OptolithiumGui/views/: __init__.py  appconfig.py  common.py  controls.py  dbview.py  development.py  diffraction.py  exposure.py  imaging.py  mask.py  metrology.py  numerics.py  peb.py  resist.py  sets.py  simulations.py  summary.py  wafer.py
OptolithiumGui/xhtml/: report.xhtml
installer/: Optolithium.aip
