CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0015 NEW)

SET(CMAKE_USE_RELATIVE_PATHS ON)
SET(CMAKE_SKIP_RPATH TRUE)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")

SET(CMAKE_BUILD_TYPE "Release")

ADD_LIBRARY( eikonal STATIC
	"src/FMM_Core.c"
	"src/FMM_eikonal2d.c"
	"src/FMM_eikonal3d.c"
	"src/FMM_Heap.c"
)