CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
PROJECT(polyclipping)

SET(CMAKE_USE_RELATIVE_PATHS ON)
SET(CMAKE_SKIP_RPATH TRUE)

SET(CMAKE_BUILD_TYPE "Release")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")

ADD_LIBRARY(kissfft STATIC
        "src/kiss_fft.c"
        "src/kiss_fftnd.c"
)

# CONFIGURE_FILE (polyclipping.pc.cmakein "${PCFILE}" @ONLY)

# INSTALL (FILES clipper.hpp DESTINATION "${CMAKE_INSTALL_INCDIR}")
# INSTALL (TARGETS polyclipping LIBRARY DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/lib")
# INSTALL (FILES "${PCFILE}" DESTINATION "${CMAKE_INSTALL_PKGCONFIGDIR}")

# SET_TARGET_PROPERTIES(polyclipping PROPERTIES VERSION 19.0.0 SOVERSION 19 )
